applications/repo-thirdparty-cn-north4/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: repo-tools-ingress
spec:
  tls:
    - hosts:
        - tools.mindspore.cn
      secretName: repo-tools-secrets
  rules:
    - host: tools.mindspore.cn
      http:
        paths:
          - backend:
              serviceName: mindspore-service
              servicePort: 80
            path: /

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: repo-tools-ingress
  namespace: repo-thirdparty
spec:
  tls:
    - hosts:
        - tools-mindspore.osinfra.cn
      secretName: repo-tools-osinfra-tls
  rules:
    - host: tools-mindspore.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: mindspore-service
              servicePort: 80
            path: /
